k8s-manifests/step-4-resilience/10-transaction-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-service
  namespace: finbank-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: transaction-service
  template:
    metadata:
      labels:
        app: transaction-service
    spec:
      containers:
      - name: transaction-service
        image: nvenkatasaikiran/finbank-transaction:v1
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: transaction-service
  namespace: finbank-new
spec:
  selector:
    app: transaction-service
  ports:
  - port: 8082
    targetPort: 8082
